examples/semantics/errors/error9.grace
fun error9 () : nothing
var c : char;
{
	c <- c*'l';
}
